--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -47,8 +47,37 @@
   <script src="assets/js/jquery.js"></script>
   <script>
     $.ajax({
+      url: '/member/checkLogin',
+      type: 'GET',
+      dataType: 'json'
+    }).done(function(msg){
+      console.log(msg)
+      console.log(msg.userMsg)
+      console.log(msg.status)
+      console.log(msg.userMsg.account)
+      if (msg.status == 'success') {
+        $('#loginBar').append(
+          `
+          <li><a id="account" class="drop">${msg.userMsg.realName}</a>
+            <ul>
+              <li><a href="#" style="background-color: rgba(10,198,252);">訂單查詢</a></li>
+              <li><a href="#" style="background-color: rgba(10,198,252);">會員專區</a></li>
+            </ul>
+          </li>
+          `
+        )
+      } else {
+        $('#loginBar').append(
+          `
+            <li><a href="/frontend/login.html">登入<li>
+          `
+        )
+      }
+    })
+
+    $.ajax({
       url: '/hotelNews/',
-      type: 'GET'
+      type: 'GET',
     })
       .done(function (msg) {
         console.log(msg);
@@ -115,15 +144,15 @@
       <i class="far fa-snowflake fa-2x"></i>&emsp;
       <i class="fas fa-user-circle fa-2x"></i>
       <nav id="mainav" class="fl_right">
-        <ul class="clear">
-          <li><a class="drop">我的帳戶</a>
+        <ul id="loginBar" class="clear">
+          <!-- <li><a id="account" class="drop"></a>
             <ul>
               <li><a href="#" style="background-color: rgba(10,198,252);">訂單查詢</a></li>
               <li><a href="#" style="background-color: rgba(10,198,252);">會員專區</a></li>
             </ul>
+          </li> -->
         </ul>
       </nav>
-      </li>
     </div>
 
     <header id="header" class="hoc clear">
