所有頁面增加會員登入後

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -111,7 +111,7 @@
   <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('images/backgrounds/01.png');">
 
-    <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0% 5%">
+    <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
       <i class="far fa-snowflake fa-2x"></i>&emsp;
       <i class="fas fa-user-circle fa-2x"></i>
       <nav id="mainav" class="fl_right">
