--- a/src/main/resources/public/pages/notic.html
+++ b/src/main/resources/public/pages/notic.html
@@ -10,6 +10,20 @@
 <!-- ################################################################################################ -->
 <!-- Top Background Image Wrapper -->
 <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');"> 
+  <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
+    <i class="far fa-snowflake fa-2x"></i>&emsp;
+    <i class="fas fa-user-circle fa-2x"></i>
+    <nav id="mainav" class="fl_right">
+      <ul class="clear">
+        <li><a class="drop">我的帳戶</a>
+          <ul>
+            <li><a href="#" style="background-color: rgba(10,198,252);">訂單查詢</a></li>
+            <li><a href="#" style="background-color: rgba(10,198,252);">會員專區</a></li>
+          </ul>
+      </ul>
+    </nav>
+    </li>
+  </div>
   <!-- ################################################################################################ -->
   <header id="header" class="hoc clear">
     <div id="logo" class="fl_left">
@@ -56,7 +70,7 @@
     <p>|</p>
     <p><a href="traffic.html">交通資訊</a></p>
     <p>|</p>
-    <p><a href="#" class="active">注意事項</a></p>
+    <p><a href="#" class="active" style="color: #f3bf07;">注意事項</a></p>
   </div>
 </div>
 
