--- a/src/main/resources/public/pages/room.html
+++ b/src/main/resources/public/pages/room.html
@@ -75,6 +75,21 @@
 
 <body id="top">
   <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');">
+    <div
+      style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
+      <i class="far fa-snowflake fa-2x"></i>&emsp;
+      <i class="fas fa-user-circle fa-2x"></i>
+      <nav id="mainav" class="fl_right">
+        <ul class="clear">
+          <li><a class="drop">我的帳戶</a>
+            <ul>
+              <li><a href="#" style="background-color: rgba(10,198,252);">訂單查詢</a></li>
+              <li><a href="#" style="background-color: rgba(10,198,252);">會員專區</a></li>
+            </ul>
+        </ul>
+      </nav>
+      </li>
+    </div>
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left">
         <a href="../index.html">
@@ -116,7 +131,7 @@
     <br>
     <div id="breadcrumb" class="hoc clear"
       style="display: flex;font-size: 150%; justify-content: space-evenly; flex-direction: row; margin: 0.5% 30% 0.5% 30%;">
-      <p><a class="active" href="#">房型一覽</a></p>
+      <p><a class="active" href="#" style="color: #f3bf07">房型一覽</a></p>
       <p>|</p>
       <p><a href="booking.html">立即訂房</a></p>
     </div>
