首頁會員加半形空格

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -69,7 +69,7 @@
       } else {
         $('#loginBar').append(
           `
-            <li><a href="/frontend/login.html">登入<li>
+            <span><a href="/frontend/login.html" style="display: flex; flex-direction: row; flex-wrap: nowrap;">登入<span>
           `
         )
       }
@@ -140,9 +140,9 @@
   <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('images/backgrounds/01.png');">
 
-    <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
+    <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;justify-content:flex-end">
       <i class="far fa-snowflake fa-2x"></i>&emsp;
-      <i class="fas fa-user-circle fa-2x"></i>
+      <i class="fas fa-user-circle fa-2x"></i>&nbsp;
       <nav id="mainav" class="fl_right">
         <ul id="loginBar" class="clear">
           <!-- <li><a id="account" class="drop"></a>
