--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -40,7 +40,6 @@
     .fl_rightt {
       padding-left: 15px;
       color: inherit;
-
     }
   </style>
 
@@ -141,7 +140,7 @@
   <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('images/backgrounds/01.png');">
 
-    <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;justify-content:flex-end">
+    <div style="height:78.67px; display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;justify-content:flex-end">
       <i class="far fa-snowflake fa-2x"></i>&emsp;
       <i class="fas fa-user-circle fa-2x"></i>&nbsp;
       <nav id="mainav" class="fl_right">
