--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -321,47 +321,7 @@
 
         <!-- / main body -->
         <!-- ################################################################################################ -->
-        <div style="background-color: #01546B; font-size: 14px;">
-          <br>
-          <form action=""
-            style="display: flex; flex-wrap: nowrap; flex-direction: row; justify-content: center; justify-content: space-between;">
-            <div class="">
-              <input style="width:200px;height:40px;" type="text" name="datefilter" class="form-control"
-                placeholder="入住時間 ～ 退房時間" />
-            </div>
-
-            <select style="width:150px;height:40px;">
-              <option>房型選擇</option>
-              <option>經濟房</option>
-              <option>景觀房</option>
-              <option>豪華房</option>
-              <option>尊榮房</option>
-              <option>總統套房</option>
-            </select>
-            <select style="width:150px;height:40px;">
-              <option>房間樓層</option>
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
-              <option>6</option>
-              <option>7</option>
-              <option>8</option>
-            </select>
-            <select style="width:150px;height:40px;">
-              <option>入住人數</option>
-              <option>2（成人數）</option>
-              <option>3（成人數）</option>
-              <option>4（成人數）</option>
-            </select>
-
-            <button style="width:120px;height:40px; background-color: #f3bf07;">現在預訂</button>
-          </form>
-          <p align="center" style="color: aliceblue;">13歲以上同成人收費</p>
-          </tr><br>
-        </div>
-
+      
       </section>
       <div class="clear"></div>
     </main>
@@ -390,7 +350,7 @@
             <li><a class="btn" href="#">了解更多</a></li>
           </ul>
         </div>
-        <div class="one_third last"><a class="imgover" href="#"><img src="images/348x394.png" alt=""></a></div>
+        <div class="one_third last"><a class="imgover" href="#"><img src="images/demo/348x394.png" alt=""></a></div>
       </article>
       <!-- ################################################################################################ -->
     </section>
@@ -446,6 +406,10 @@
   <script src="layout/scripts/jquery.backtotop.js"></script>
   <script src="layout/scripts/jquery.mobilemenu.js"></script>
 
+  <!-- 公車 -->
+  <script src="layout/scripts/TDXBus.js"></script>
+  <!-- 天氣 -->
+  <script src="layout/scripts/Weather.js"></script>
   <!-- 日期 -->
   <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
@@ -466,32 +430,7 @@
       });
     });
   </script>
-  <script>
-    $('#date1').datetimepicker({
-      date: null,
-      format: 'YYYY-MM-DD',
-      locale: moment.locale('zh-tw'),
-      daysOfWeekDisabled: [0, 6],
-      minDate: moment().add(1, 'days'),
-      maxDate: moment().add(30, 'days'),
-      disabledDates: [
-        moment().add(1, 'days'),
-        moment().add(2, 'days'),
-        '2021-10-10',
-        '2021-12-25'
-      ],
-      disabledDates(time) {
-        return time.getTime() < Date.now() - 3600 * 1000 * 24;
-      }
-    });
 
-    function logout() {
-      $.ajax({
-          type: "POST",
-          url: "/member/logout"
-        })
-    }
-  </script>
 </body>
 
 </html>
