--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -361,7 +361,7 @@
             <li><a class="btn" href="#">了解更多</a></li>
           </ul>
         </div>
-        <div class="one_third last"><a class="imgover" href="#"><img src="images/348x394.png" alt=""></a></div>
+        <div class="one_third last"><img style=" height: 380px;" src="images/backgrounds/lobby_img.jpg" alt=""></div>
       </article>
       <!-- ################################################################################################ -->
     </section>
