--- a/src/main/resources/public/pages/booking.html
+++ b/src/main/resources/public/pages/booking.html
@@ -8,10 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link href="../layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+
+  <!-- 日期的CSS -->
   <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
   <link href="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css"
     rel="stylesheet" />
-
   <style>
     table,
     th,
@@ -108,6 +109,20 @@
   <!-- ################################################################################################ -->
   <!-- Top Background Image Wrapper -->
   <div class="bgded overlay padtop" style="background-image:url('../images/backgrounds/01.png');">
+    <div style="display: flex;flex-direction: row;flex-wrap: nowrap;justify-content:flex-end;align-items:center;margin:0 auto; padding: 0px 5px;max-width: 1140px;">
+      <i class="far fa-snowflake fa-2x"></i>&emsp;
+      <i class="fas fa-user-circle fa-2x"></i>
+      <nav id="mainav" class="fl_right">
+        <ul class="clear">
+          <li><a class="drop">我的帳戶</a>
+            <ul>
+              <li><a href="#" style="background-color: rgba(10,198,252);">訂單查詢</a></li>
+              <li><a href="#" style="background-color: rgba(10,198,252);">會員專區</a></li>
+            </ul>
+        </ul>
+      </nav>
+      </li>
+    </div>
     <!-- ################################################################################################ -->
     <header id="header" class="hoc clear">
       <div id="logo" class="fl_left">
@@ -121,7 +136,7 @@
 
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li class="active"><a href="../index.html">首頁</a></li>
+          <li class=""><a href="../index.html">首頁</a></li>
           <li><a class="drop">關於我們</a>
             <ul>
               <li><a href="intro.html">簡介</a></li>
@@ -161,7 +176,7 @@
       style="display: flex;font-size: 150%; justify-content: space-evenly; flex-direction: row; margin: 0.5% 30% 0.5% 30%;">
       <p><a href="room.html">房型一覽</a></p>
       <p>|</p>
-      <p><a href="booking.html" class="active">立即訂房</a></p>
+      <p><a href="booking.html" class="active" style="color:#f3bf07;">立即訂房</a></p>
     </div>
   </div>
   <div class="wrapper row3">
@@ -175,7 +190,9 @@
           style="display: flex; flex-wrap: nowrap; flex-direction: row; justify-content: center; justify-content: space-between;">
           <div class="">
             <input style="width:200px;height:40px;" type="text" name="datefilter" class="form-control"
-              placeholder="入住時間 ～ 退房時間" />
+              placeholder="入住時間 ～ 退房時間">
+            <!-- <i class="fa fa-calendar glyphicon glyphicon-calendar"></i> -->
+            </input>
           </div>
           <select style="width:150px;height:40px;">
             <option>房型選擇</option>
@@ -202,7 +219,7 @@
             <option>3（成人數）</option>
             <option>4（成人數）</option>
           </select>
-          <button style="width:120px;height:40px; background-color: #f3bf07;">現在預訂</button>
+          <button name="search_room" style="width:120px;height:40px; background-color: #f3bf07;">查詢空房</button>
         </form>
         <p align="center" style="color: aliceblue;">13歲以上同成人收費</ㄋ>
           </tr><br>
@@ -453,10 +470,22 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+    <!-- 樣式載入連結 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/moment.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.js"></script>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    </link>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-daterangepicker/2.1.25/daterangepicker.min.css"
+      rel="stylesheet">
+    </link>
+
     <script type="text/javascript">
+
       $(function () {
         $('input[name="datefilter"]').daterangepicker({
           autoUpdateInput: false,
+          autoApply: true,
           locale: {
             cancelLabel: 'Clear'
           }
@@ -487,7 +516,9 @@
           return time.getTime() < Date.now() - 3600 * 1000 * 24;
         }
       });
+
     </script>
+
 </body>
 
 </html>
